# nodepool

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  Dockerfile  README  README.md  README.rst  TESTING.rst  bindep.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
doc/: Makefile  requirements.txt
doc/source/: conf.py  configuration.rst  devguide.rst  index.rst  installation.rst  operation.rst  scripts.rst
etc/: nodepool-launcher.service
etc/nodepool-launcher.service.d/: centos.conf
nodepool/: allocation.py  builder.py  config.py  exceptions.py  fakeprovider.py  jenkins_manager.py  jobs.py  launcher.py  logconfig.py  myjenkins.py  nodedb.py  nodepool.py  nodeutils.py  provider_manager.py  sshclient.py  stats.py  status.py  task_manager.py  version.py  webapp.py  zk.py
nodepool/cmd/: __init__.py  builder.py  config_validator.py  launcher.py  nodepoolcmd.py  nodepoold.py
nodepool/driver/: __init__.py  utils.py
nodepool/tests/: __init__.py  fake-image-create  test_allocator.py  test_builder.py  test_commands.py  test_config_comparisons.py  test_driver_kubernetes.py  test_driver_static.py  test_drivers.py  test_launcher.py  test_nodelaunchmanager.py  test_nodepool.py  test_sdk_integration.py  test_shade_integration.py  test_webapp.py  test_zk.py
playbooks/nodepool-functional/: run.yaml
playbooks/nodepool-functional-base/: post.yaml  pre.yaml
playbooks/nodepool-functional-k8s/: post.yaml  pre.yaml  run.yaml
playbooks/nodepool-functional-openshift/: pre.yaml  run.yaml
playbooks/nodepool-functional-py35/: run.yaml
playbooks/nodepool-functional-py35-src/: run.yaml
playbooks/nodepool-functional-src/: run.yaml
tools/: check_devstack_plugin.sh  fake-dib.yaml  fake-secure.conf  fake-servers.py  fake-statsd.py  fake.yaml  logging.conf  print-zk.py  test-setup.sh  zmq-server.py  zmq-stream.py
(+183 files in other folders)
