[metadata]
name = nodepool
summary = Node pool management for a distributed test infrastructure
description-file =
    README.rst
author = Zuul Team
author-email = zuul-discuss@lists.zuul-ci.org
home-page = https://zuul-ci.org/
python-requires = >= 3.5
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    nodepool = nodepool.cmd.nodepoolcmd:main
    nodepool-builder = nodepool.cmd.builder:main
    nodepool-launcher = nodepool.cmd.launcher:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[wheel]
universal = 1
